--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.13.2
 altair==5.4.1
 aniso8601==9.0.1
+ansicolors==1.1.8
 anywidget==0.9.13
 asttokens==2.4.1
 attrs==24.2.0
 beautifulsoup4==4.12.3
+bleach==6.1.0
 blinker==1.8.2
 bqplot==0.12.43
 branca==0.7.2
@@ -21,12 +23,14 @@ cycler==0.12.1
 databricks-sdk==0.31.1
 debugpy==1.8.5
 decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.14
 docker==7.1.0
 duckdb==1.0.0
 entrypoints==0.4
 exceptiongroup==1.2.2
 executing==2.0.1
+fastjsonschema==2.20.0
 filelock==3.15.4
 Flask==3.0.3
 folium==0.17.0
@@ -64,6 +68,7 @@ jsonschema-specifications==2023.12.1
 jupyter-leaflet==0.19.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 jupyterlab_widgets==3.0.13
 keybert==0.8.5
 kiwisolver==1.4.5
@@ -75,10 +80,14 @@ MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+mistune==3.0.2
 mlflow==2.15.1
 mlflow-skinny==2.15.1
 mpmath==1.3.0
 narwhals==1.5.5
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.3
 numpy==1.26.4
@@ -87,6 +96,8 @@ opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
 packaging==24.1
 pandas==2.2.2
+pandocfilters==1.5.1
+papermill==2.6.0
 parso==0.8.4
 pillow==10.4.0
 platformdirs==4.2.2
@@ -111,6 +122,7 @@ pystac-client==0.8.3
 pytest==8.3.2
 python-box==7.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 pywin32==306
 PyYAML==6.0.2
@@ -140,6 +152,7 @@ sympy==1.13.2
 tabulate==0.9.0
 tenacity==8.5.0
 threadpoolctl==3.5.0
+tinycss2==1.3.0
 tokenizers==0.19.1
 toml==0.10.2
 tomli==2.0.1
@@ -155,6 +168,7 @@ urllib3==2.2.2
 waitress==3.0.0
 watchdog==4.0.2
 wcwidth==0.2.13
+webencodings==0.5.1
 Werkzeug==3.0.4
 whitebox==2.3.5
 whiteboxgui==2.3.0
