--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.10'  # Specify a valid Python version
 
     - name: Install dependencies
       run: |
@@ -23,4 +23,4 @@ jobs:
     - name: Run tests
       run: |
         echo "Running tests..."
-        # Add test commands here, if any
+        pytest  # Assuming you have tests configured with pytest
