--- a/requirements.txt
+++ b/requirements.txt
@@ -106,7 +106,7 @@ pluggy==1.5.0
 prompt_toolkit==3.0.47
 protobuf==5.28.0
 psutil==6.0.0
-psycopg2-binary
+psycopg2-binary==2.9.9
 psygnal==0.11.1
 pure_eval==0.2.3
 pyarrow==15.0.2
